# esp32-c6-zigbee-macropad

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ha_automation_template.yaml  macropadtodo.txt  partitions.csv
.devcontainer/: Dockerfile
STL/: Base.stl  ESP_lock.stl  MacroPad3x2.FCStd  Plate.stl  Screw_cover.stl
components/keys/: CMakeLists.txt  keys.c
components/keys/include/: keys.h
components/ledstrip_fx/: CMakeLists.txt  lsfx.c  lsfx_fx_bicolor.c  lsfx_fx_loading.c  lsfx_fx_police.c  lsfx_fx_rainbow.c  lsfx_fx_static.c
components/ledstrip_fx/include/: lsfx.h  lsfx_fx.h  lsfx_fx_bicolor.h  lsfx_fx_loading.h  lsfx_fx_police.h  lsfx_fx_rainbow.h  lsfx_fx_static.h
components/zigbee_core/: CMakeLists.txt  zb_core.c
components/zigbee_core/include/: zb_core.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  macropad.c  macropad.h  macropad_led.c  macropad_led.h  macropad_led_addressable.c  macropad_led_gpio.c  macropad_map.h  macropad_zigbee.c  macropad_zigbee.h  main.c
